# waypoint

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  waypoint.example.yaml  waypoint.yaml.example
backend/launchd/: com.waypoint.agent.plist.template
backend/scripts/: claude_pretool_hook.py  claude_thread_enumerator.sh  install_launchd.sh  opencode_remote_serve.sh
backend/src/waypoint/: __init__.py  api.py  assistant_assets.py  attachments.py  auth.py  builtin_completions.py  claude_cli.py  claude_runtime.py  claude_threads.py  claude_threads_remote.py  cli.py  client.py  codex_app_server.py  config.py  events.py  git_meta.py  launch_env.py  launch_targets.py  main.py  manager.py  normalizer.py  perf.py  presets.py  recurrence.py  runtime.py  scheduler.py  schemas.py  server_config.py  session_presence.py  settings.py  ssh_askpass.py  ssh_master.py  storage.py  tailnet.py  tmux.py  usage_dashboard.py  workspace_git.py  workspace_preview.py
backend/src/waypoint.egg-info/: PKG-INFO  SOURCES.txt
backend/src/waypoint/backends/: __init__.py  _legacy_shims.py  account_profiles.py  approvals.py  base.py  bootstrap.py  capabilities.py  completions.py  context_usage_source.py  diff_preview.py  events.py  pane_text.py  plugin_config.py  registry.py  transcript_fs.py  transcript_fs_remote.py  transcript_fs_remote_script.py  transcripts.py
backend/src/waypoint/backends/claude_code/: __init__.py  adapter.py  commands.py  history.py  models.py  normalize.py  permission_modes.py  plugin.py  rate_limits.py  remote.py  remote_probe_script.py  runtime_hook.py  schemas.py  side_question.py  support.py  terminal_theme.py  terminal_theme_remote.py  threads.py  threads_remote.py  transport.py  usage_source.py  version.py
backend/src/waypoint/backends/claude_tty/: _state.py  byte_source.py  normalize.py  pane_dialog.py  plugin.py  tailer.py  transport.py
backend/src/waypoint/backends/codex/: __init__.py  _sdk_compat.py  adapter.py  history.py  normalize.py  pane.py  permission_modes.py  plugin.py  rate_limits.py  remote.py  remote_probe_script.py  schemas.py  transport.py  usage_source.py
backend/src/waypoint/backends/codex/collaboration_mode_templates/: README.md
backend/src/waypoint/backends/opencode/: __init__.py  adapter.py  client.py  connection_config.py  health.py  normalize.py  pane.py  plugin.py  remote.py  transport.py  usage_source.py
backend/src/waypoint/backends/tmux/: __init__.py  adapter.py  normalize.py  plugin.py  renderer.py  transport.py
backend/src/waypoint/notifications/: __init__.py  contracts.py  registry.py  render.py  service.py  telegram.py
backend/src/waypoint/telemetry/: __init__.py  aggregate.py  api_models.py  facts.py  ingest.py  insights.py  nl.py  query.py  store.py  summarizer.py  tokens.py
backend/src/waypoint/telemetry/instance/: __init__.py  collect.py  insights.py  model.py  nl.py  roconn.py  service.py  walk.py
backend/src/waypoint/transports/: __init__.py  base.py  claude.py  codex.py  tmux.py
backend/src/waypoint/usage_providers/: __init__.py  contracts.py  lumid.py  registry.py  service.py  store.py
backend/tests/: test_account_doctor.py  test_account_probe_env.py  test_account_profile_selection.py  test_account_profiles.py  test_assistant_assets.py  test_attachments.py  test_auth.py  test_backend_capabilities_split.py  test_backend_registry.py  test_board_ready.py  test_btw_routing.py  test_claude_cli.py  test_claude_cli_version.py  test_claude_code_list_models.py  test_claude_code_preflight.py  test_claude_code_usage_source.py  test_claude_commands.py  test_claude_launch_contract.py  test_claude_models_offering.py  test_claude_models_resolution.py  test_claude_remote.py  test_claude_threads.py  test_claude_threads_remote.py  test_claude_tty_approval.py  test_claude_tty_byte_source.py  test_claude_tty_catalogue.py  test_claude_tty_controls.py  test_claude_tty_normalize.py  test_claude_tty_pane_dialog.py  test_claude_tty_tailer.py  test_cli.py  test_cli_coalesce.py  test_cli_reset.py  test_client.py  test_codex_app_server.py  test_codex_discovery_profile.py  test_codex_local_bin.py  test_codex_pane.py  test_codex_permission_modes.py  test_codex_plugin.py  (+92 more)
backend/tests/fixtures/: claude_task_stream.json  codex_model_list_0144.json  codex_thread_start_max_0144.json
backend/tests/fixtures/claude_tty_pane/: approval_bash.txt  approval_bash_ansi.txt  approval_quoted_in_transcript.txt  approval_with_queued.txt  approval_write.txt  effort_popup.txt  model_selector.txt  overflow_bash.txt  plan_approval.txt  question_dialog.txt  question_dialog_notes.txt  question_dialog_single.txt  question_with_one_queued.txt  question_with_two_queued.txt  ready.txt  slash_menu.txt  trust_dialog.txt
backend/tests/golden/: backends_payload.json
docs/: RELEASING.md  account_profiles.md  coding_agent_plugins.md  personal_assistant.md  rfc-workspace-dock-viewport-fallback.md  telegram-notifications.md  telemetry.md  usage-providers.md  waypoint-manager.md
waypointctl/: README.md  pyproject.toml
waypointctl/src/waypointctl/: __init__.py  __main__.py  ancestry.py  cli.py  client.py  commands.py  config.py  control.py  daemon.py  frontend_build.py  frontend_install.py  health.py  legacy.py  net.py  paths.py  process.py  procgroup.py  protocol.py  selfupdate.py  services.py  skills.py  stack.py  supervisor.py  tailscale.py  uninstall.py  update.py
waypointctl/src/waypointctl/control_assets/: control.css  control.html  control.js
waypointctl/tests/: test_ancestry.py  test_cli.py  test_client.py  test_config.py  test_control.py  test_daemon_e2e.py  test_frontend_build.py  test_frontend_install.py  test_health.py  test_net.py  test_paths.py  test_procgroup.py  test_protocol.py  test_selfupdate.py  test_services.py  test_skills.py  test_stack.py  test_supervisor.py  test_tailscale.py  test_uninstall.py  test_update.py
(+220 files in other folders)
