[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waypoint"
version = "0.1.0"
description = "Remote-control daemon for Claude Code and Codex sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "openai-codex-app-server-sdk",
  "pydantic>=2.11.0",
  "python-dotenv>=1.1.0",
  "uvicorn>=0.35.0",
  "websockets>=15.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
]

[project.scripts]
waypoint = "waypoint.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
openai-codex-app-server-sdk = { path = "../3rdparty/codex/sdk/python" }
