[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waypoint"
version = "0.1.0"
description = "Remote-control daemon for Claude Code and Codex sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "openai-codex-app-server-sdk",
  "pydantic>=2.11.0",
  "PyYAML>=6.0.0",
  "uvicorn>=0.35.0",
  "websockets>=15.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.13.0",
  "pre-commit>=4.0.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "types-PyYAML>=6.0.0",
]

[project.scripts]
waypoint = "waypoint.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
openai-codex-app-server-sdk = { path = "../3rdparty/codex/sdk/python" }

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
known_first_party = ["waypoint"]

[tool.ruff]
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E501",  # long lines — black handles wrapping; long string literals stay
]

[tool.codespell]
ignore-words-list = "pres"
skip = "*/package-lock.json,*.lock,*.png,*.jsonl,*.log"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
