[build-system]
requires = ["setuptools>=83.0.0", "wheel", "setuptools-scm>=10.2.1"]
build-backend = "setuptools.build_meta"

[project]
name = "waypoint"
dynamic = ["version"]
description = "Remote-control daemon for Claude Code and Codex sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.10.0",
  "croniter>=6.0.0",
  "fastapi>=0.139.0",
  "openai-codex==0.1.0b3",
  "pydantic>=2.11.0",
  "pyte>=0.8.2",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0.0",
  "typer>=0.27.0",
  "tzdata>=2024.1",
  "uvicorn>=0.51.0",
  "websockets>=16.1",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "mypy>=2.3.0",
  "pre-commit>=4.6.1",
  "pytest>=8.4.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.15.21",
  "types-croniter>=6.0.0",
  "types-PyYAML>=6.0.0",
]

[project.scripts]
waypoint = "waypoint.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.setuptools_scm]
root = ".."
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"waypoint.backends.codex" = [
  "collaboration_mode_templates/plan.md",
  "collaboration_mode_templates/default.md",
]

[tool.uv]
# openai-codex 0.1.0b3 hard-pins the pre-release CLI binary 0.137.0a4. Override
# it to the latest stable cli-bin (0.136.0, which has a manylinux/glibc wheel).
# Managed local sessions run this bundled binary; the PyPI cli-bin channel lags
# the npm @openai/codex channel, so 0.136.0 is the closest stable to the tested
# codex-cli 0.139.0.
override-dependencies = ["openai-codex-cli-bin==0.136.0"]

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
known_first_party = ["waypoint"]

[tool.ruff]
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E501",  # long lines — black handles wrapping; long string literals stay
]

[tool.codespell]
ignore-words-list = "pres,ratatui"
skip = "*/package-lock.json,*.lock,*.png,*.jsonl,*.log,*/fixtures/claude_tty_pane/*"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
